// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button (Dropdown) Snapshots renders a large, dropdown primary button 1`] = `
.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #0875e1;
  border-color: transparent;
  color: #ffffff;
  min-width: 112px;
  height: 48px;
  padding: 0 20px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-5:focus {
  background-color: #0875e1;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:hover:focus {
  background-color: #005cb9;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #004387;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:hover {
  background-color: #005cb9;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #a6d2ff;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px 0 0;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-caret-down wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M11.727 16.59c.15.226.398.222.546 0l5.454-8.18c.15-.226.044-.41-.227-.41h-11c-.276 0-.375.188-.227.41l5.454 8.18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</button>
`;

exports[`Button (Dropdown) Snapshots renders a large, dropdown secondary button 1`] = `
.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px 0 0;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
  min-width: 112px;
  height: 48px;
  padding: 0 20px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-5 .button-label-data {
  color: #333333;
}

.emotion-5:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-5:hover:focus {
  background-color: #dfe2e6;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #333333;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-5:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #333333;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-5:disabled .button-label-data,
.emotion-5:active:disabled .button-label-data,
.emotion-5:focus:disabled .button-label-data,
.emotion-5:hover:disabled .button-label-data {
  color: #a1aab3;
}

.emotion-5:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-caret-down wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M11.727 16.59c.15.226.398.222.546 0l5.454-8.18c.15-.226.044-.41-.227-.41h-11c-.276 0-.375.188-.227.41l5.454 8.18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</button>
`;

exports[`Button (Dropdown) Snapshots renders a medium, dropdown primary button 1`] = `
.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #0875e1;
  border-color: transparent;
  color: #ffffff;
  min-width: 96px;
  height: 40px;
  padding: 0 16px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #ffffff;
}

.emotion-5:focus {
  background-color: #0875e1;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:hover:focus {
  background-color: #005cb9;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #004387;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:hover {
  background-color: #005cb9;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #a6d2ff;
  border-color: transparent;
  color: #ffffff;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-5:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 4px 0 0;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-caret-down wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M11.727 16.59c.15.226.398.222.546 0l5.454-8.18c.15-.226.044-.41-.227-.41h-11c-.276 0-.375.188-.227.41l5.454 8.18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</button>
`;

exports[`Button (Dropdown) Snapshots renders a medium, dropdown secondary button 1`] = `
.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-0:hover:active {
  background-color: transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 4px 0 0;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
  min-width: 96px;
  height: 40px;
  padding: 0 16px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-5 .button-label-data {
  color: #333333;
}

.emotion-5:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #333333;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-5:hover:focus {
  background-color: #dfe2e6;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #333333;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #333d47;
}

.emotion-5:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #333333;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-5:disabled .button-label-data,
.emotion-5:active:disabled .button-label-data,
.emotion-5:focus:disabled .button-label-data,
.emotion-5:hover:disabled .button-label-data {
  color: #a1aab3;
}

.emotion-5:not([disabled]):focus {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    <span
      className="emotion-2"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-caret-down wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M11.727 16.59c.15.226.398.222.546 0l5.454-8.18c.15-.226.044-.41-.227-.41h-11c-.276 0-.375.188-.227.41l5.454 8.18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
</button>
`;
